tests/NormalTests/paczka1/fuzzy1/72557256.err
Error in line 6: lbh S64 18,0
Error in line 23: PBiMiuABlb S514  5,5
Error in line 38: 9sf2KPfbb2 S514 9,1
